2006-02-28	blytkerchan
	* compare_and_exchange.c: new file
	* decrement.c: ditto
	* fetch_and_add.c: ditto
	* increment.c: ditto
	* membar.c: ditto
	* set.c: ditto
	* swap.c: ditto