@@ -1,3 +1,7 @@
+2006-03-01	blytkerchan
+	* compare_and_exchange.c (compare_and_exchange_int): return 0 on success, -1 on failure
+	(compare_and_exchange_ptr): ditto
+
 2006-02-28	blytkerchan
 	* compare_and_exchange.c: new file
 	* decrement.c: ditto
